--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
-    "@react-navigation/native-stack": "^7.9.0",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-linear-gradient": "^15.0.8",
@@ -19,8 +18,8 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.19.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
     "tailwindcss": "^3.4.19"
   },
