--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,5 +4,6 @@ pydantic==2.5.3
 python-dotenv==1.0.0
 firebase-admin==6.4.0
 databricks-sql-connector==3.1.0
+databricks-sdk==0.18.0
 python-jose[cryptography]==3.3.0
 
