--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
       "apiUrl": "https://your-api-url.com/api/v1"
     },
     "plugins": [
-      "@react-native-community/datetimepicker"
+      "@react-native-community/datetimepicker",
+      "expo-web-browser"
     ]
   }
 }
