--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@react-navigation/native": "^7.1.26",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
+    "expo-auth-session": "~7.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "expo-web-browser": "~15.0.10",
     "firebase": "^11.1.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
