--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
     "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-auth-session": "~7.0.10",
+    "expo-file-system": "^19.0.21",
     "expo-linear-gradient": "^15.0.8",
+    "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
     "firebase": "^11.1.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-qrcode-svg": "^6.3.21",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.15.1",
+    "react-native-view-shot": "^4.0.3",
     "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
