--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
+    "@supabase/supabase-js": "^2.89.0",
     "axios": "^1.13.2",
     "expo": "~54.0.30",
     "expo-auth-session": "~7.0.10",
