--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
     "@supabase/supabase-js": "^2.89.0",
